--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/responsive.css') }}">
         {% endblock %}
 
 
